src/github.com/ebay/beam/query/parser/testdata/select/errors/empty_where.res
Query:
SELECT *
WHERE { }

Parsed:
Error: unable to parse query: line 2 column 9: expected # 
